# infra-pilot

./: .editorconfig  .env.example  .npmrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN-SYSTEM-SKELETON.md  DESIGN-TOKENS.md  GOOD_FIRST_ISSUES.md  LICENSE  Makefile  OWNERS.md  README.md  SECURITY.md  docker-compose.yml  infra-pilot.code-workspace  pytest.ini  requirements.txt  setup.py  setup.sh
.docs/: TRANSFORMATION_SUMMARY.md
.github/: dependabot.yml  pull_request_template.md
branding/: branding.md
cli/: Dockerfile
docs/: CI_DEMO_GATE.md  CONTRIBUTING.md  README-template.md  README.md  TESTING.md  branding-guidelines.md  branding.md  design-system.md  design-tokens.md  feature-implementation-plan-v2.md  feature-implementation-plan-v3.md  feature-implementation-plan-v4.md  feature-implementation-plan.md  implementation-plan.md  implementation-summary.md  quickstart.md  testing-guidelines.md  triage.md
experimental/: README.md
experimental/desktop/src-tauri/: Cargo.toml  tauri.conf.json
experimental/desktop/src-tauri/src/: lib.rs  main.rs
infra/: __init__.py
mobile/: package.json
modules/: aws_extended_001.py
scripts/: coverage_badge_updater.py  coverage_report.py  coverage_report.sh  coverage_summary.py  healthcheck.sh  install-deps.sh  prerequisites-check.sh  release.sh  setup.sh  update_readme_coverage.sh
servermanager/: pom.xml
tests/: conftest.py  test_aws_extended_001_unit.py  test_aws_service_defaults.py
tools/: lint-all.sh  run-all-tests.sh
wiki/: 01-Installation.md  02-First-Deployment.md  03-Configuration.md  04-Usage-Examples.md  (+9 more)
(+1769 files in other folders)
